fixed kenbox spacing

--- a/guides/guidestyle.css
+++ b/guides/guidestyle.css
@@ -56,7 +56,9 @@
 #KenBox {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     flex-direction: column;
+    height: 160px;
 }
 
 #kenPic {
@@ -65,9 +67,9 @@
 
 #kenQuoteBody {
     padding: 0px 10px;
-    margin: 15px;
+    margin: 22px auto 0px auto;
     text-align: center;
-    border: 1px solid rgba(50,50,50,0.3);
+    border: 1px solid rgba(50,50,50,0.4);
     border-radius: 3px;
 }
 #TagBox h3 {
